# NucCCNeutrons

./: CMakeLists.txt  ExtractCrossSection.cpp  FinalCutTree.yaml  FitSidebands.cpp  InversionWarpingStudy.cpp  MergeAndScaleByPOT.cpp  NewProcessAnaTuples.cxx  ProcessAnaTuples.cxx  ProcessAnaTuples_SidebandBitfield.cxx  README.md  SpecialSampleAsErrorBand.cpp  SwapSysUnivWithCV.cpp  generateGitVersion.cmake  gitVersion.cpp.in  gitVersion.h  setup.sh.in
NewIO/: NotCached.cpp  NotCached.h  Schema.cpp  Schema.h  SchemaView.h  schemaView.cpp
analyses/: Background.cpp  Background.h  CMakeLists.txt  MuonMomentum.cpp
analyses/background/: Background.cpp  Background.h  CMakeLists.txt  CrossSection.h
analyses/base/: Background.cpp  Background.h  CMakeLists.txt  Study.cpp  Study.h
analyses/crossSections/: CMakeLists.txt  MuonMomentum.cpp  NeutronMultiplicity.cpp  README.md
analyses/multiplicity/: NeutronMultiplicity.h
analyses/sideband/: CMakeLists.txt  CrossSection.h  Sideband.cpp  Sideband.h
analyses/signal/: CMakeLists.txt  CrossSection.h  NeutronDetection.cpp  NeutronDetection.h  Signal.cpp  Signal.h
analyses/studies/: BackgroundsByGENIECategory.h  BackgroundsByPionContent.h  CMakeLists.txt  CandidateCauses.cpp  CandidateCauses.h  CandidateMath.h  Check2p2hPairsReweight.cpp  Check2p2hPairsReweight.h  CheckReweights.cpp  CheckReweights.h  CrossSection2DSignal.h  CrossSectionSideband.h  CrossSectionSignal.h  EAvailable.cpp  EAvailableReconstruction.cpp  EAvailableReconstruction.h  EfficiencyByGENIE.cpp  EfficiencyByGENIE.h  EventDisplay.cpp  FSDisappearingParticles.cpp  FSDisappearingParticles.h  MoNAReweightValidation.cpp  MoNAReweightValidation.h  MuonMomentum.cpp  NSFValidation.cpp  NSFValidation.h  NeutronDetection.cpp  NeutronDetection.h  NeutronDetectionWithBackgrounds.cpp  NeutronDetectionWithBackgrounds.h  NeutronMultipilcityEAvailableCutStudy.cpp  NeutronMultiplicity.cpp  NeutronPurity.cpp  NeutronPurity.h  PerCandidateTree.cpp  PerCandidateTree.h  Pi0Removal.cpp  Pi0Removal.h  PrintEAvailTable.cpp  Q2QE.cpp  (+10 more)
analyses/variables/: CMakeLists.txt  MuonMomentum.cpp  NeutronMultiplicity.cpp  README.md
analysis/: Analysis.cpp  Analysis.h  CrossSection.cpp
app/: CMakeLists.txt  CmdLine.cpp  CmdLine.h  GetPlaylist.cpp  GetPlaylist.h  IsMC.cpp  IsMC.h  SetupPlugins.cpp  SetupPlugins.h
config/: AllNSFSystematics.yaml  CMakeLists.txt  CVOnly.yaml  CommonModels.yaml  Cuts.yaml  EAvailableResolution.yaml  EAvailableResolution_StudyOnly.yaml  Example.yaml  InclsiveAntineutrino.yaml  InclusivePTWithCCQENu.yaml  InclusivePzPT.yaml  InclusivePzPTWithCCQENu.yaml  LowRecoilMuonMomentum.yaml  LowRecoilMuonMomentumTarget3Iron.yaml  LowRecoilMuonMomentumTracker.yaml  LowRecoilNeutronsAntineutrino.yaml  MnvTunev1.yaml  NSFValidation.yaml  NeutronDetectionTracker.yaml  NeutronDetection_StudyOnly.yaml  NeutronDetection_highq3.yaml  NeutronDetection_lowq3.yaml  NeutronDetection_target3_oneTrack.yaml  NeutronMultiplicity.yaml  NeutronMultiplicityTarget5Iron.yaml  NeutronMultiplicityTracker.yaml  NeutronMultiplicity_StudyOnly.yaml  NeutronPurity_StudyOnly.yaml  NucCCNeutronsAntineutrinoStandard.yaml  NucCCNeutronsSystematics.yaml  StandardSystematics.yaml  Targets.yaml  exampleFit.yaml  multiNeutron.yaml  multiNeutron_2p2hOff.yaml  multiNeutron_2p2hOff_noSysts.yaml  multiNeutron_MnvTunev1.yaml  multiNeutron_SuSA.yaml  q3Resolution.yaml  q3Resolution_StudyOnly.yaml  (+1 more)
cuts/: AND.cpp  AND.h  Atom.h  CMakeLists.txt  Cut.cpp  Cut.h  Cutter.cpp  Cutter.h  Helicity.cpp  Helicity.h  MinosTime.cpp  MinosTime.h  OR.cpp  OR.h  Targets.yaml
cuts/reco/: Apothem.cpp  Apothem.h  CMakeLists.txt  Cut.cpp  Cut.h  DeadDiscriminators.cpp  DeadDiscriminators.h  ECALEnergyMax.cpp  ExactMatch.h  FailsQENeutronKinematics.cpp  FailsQENeutronKinematics.h  HCALEnergyMax.cpp  HasInteractionVertex.cpp  HasInteractionVertex.h  HasPi0Candidate.cpp  HasPi0Candidate.h  Helicity.h  IsAntineutrino.cpp  IsNeutrino.cpp  MinosDeltaT.cpp  MinosDeltaT.h  MuonMomentum.cpp  MuonMomentum.h  NeutronMultiplicity.cpp  NoPi0Candidates.cpp  NoPi0Candidates.h  ODEnergyMax.cpp  Q3Range.cpp  Q3Range.h  Range.h  RecoilERange.cpp  RecoilERange.h  RemoveQEByCandidates.cpp  RemoveQEByCandidates.h  TrackAngle.cpp  TrackAngle.h  UpperLimit.h  nTracks.cpp  nTracks.h
cuts/reco/targets/: Between.cpp  Between.h  CMakeLists.txt  IsInTarget.cpp  IsInTarget.h  OneSectionTarget.cpp  OneSectionTarget.h  Target1Iron.cpp  Target1Lead.cpp  Target2Iron.cpp  Target2Lead.cpp  Target3Carbon.cpp  Target3Iron.cpp  Target3Lead.cpp  Target5Iron.cpp  Target5Lead.cpp  ThreeSectionTarget.h  TwoSectionTarget.h
cuts/truth/: Apothem.cpp  Apothem.h  CMakeLists.txt  ChargedHadronMultiplicity.cpp  ChargedHadronMultiplicity.h  Current.h  Cut.cpp  Cut.h  EAvailRange.cpp  EAvailRange.h  ExactMatch.h  Helicity.h  IsAntineutrino.cpp  IsCC.cpp  IsNC.cpp  IsNeutrino.cpp  MaxNumberOfNeutrons.cpp  MuonMomentum.cpp  MuonMomentum.h  MuonZMomentum.cpp  MuonZMomentum.h  NeutronMultiplicity.cpp  NoChargedHadrons.cpp  NoChargedHadrons.h  NoPi0s.cpp  NoPi0s.h  NumberOfNeutrons.cpp  Q0Range.cpp  Q0Range.h  Q3Range.cpp  Q3Range.h  Range.h  TrackAngle.cpp  TrackAngle.h  UpperLimit.h
cuts/truth/targets/: Between.cpp  Between.h  CMakeLists.txt  IsInTarget.cpp  IsInTarget.h  OneSectionTarget.h  Target1Iron.cpp  Target1Lead.cpp  Target2Iron.cpp  Target2Lead.cpp  Target3Carbon.cpp  Target3Iron.cpp  Target3Lead.cpp  Target4Carbon.cpp  Target4Lead.cpp  Target5Iron.cpp  Target5Lead.cpp  ThreeSectionTarget.h  TwoSectionTarget.h  Water.cpp
evt/: CMakeLists.txt  CVUniverse.cpp  CVUniverse.h  CachedBranch.h  EventID.cpp  EventID.h  Universe.cpp  Universe.h  WeightCachedUniverse.h  arachne.cpp  arachne.h
fiducials/: CMakeLists.txt  Fiducial.h  Target3Carbon.cpp  Target3Iron.cpp  Target3Lead.cpp  Target5Iron.cpp  Target5Lead.cpp  Tracker.cpp
fits/: Background.cpp  Background.h  CMakeLists.txt  LinearFit.cpp  LinearFit.h  Piecewise.cpp  Piecewise.h  RegularizationTerm.h  RegularizeToCV.cpp  RegularizeToCV.h  ScaleFactor.cpp  ScaleFactor.h  Sideband.cpp  Sideband.h  Universe.cpp  Universe.h
(+125 files in other folders)
