install(FILES LowRecoilMuonMomentum.yaml LowRecoilMuonMomentumTarget3Iron.yaml LowRecoilMuonMomentumTracker.yaml NeutronMultiplicityTracker.yaml NeutronDetectionTracker.yaml NeutronMultiplicityTarget5Iron.yaml InclusivePzPT.yaml InclusivePzPTWithCCQENu.yaml EAvailableResolution.yaml NSFValidation.yaml EAvailableResolution_StudyOnly.yaml DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES Targets.yaml CommonModels.yaml NucCCNeutronsSystematics.yaml AllNSFSystematics.yaml CVOnly.yaml NucCCNeutronsAntineutrinoStandard.yaml DESTINATION bin)
