install(FILES InclusivePzPT.yaml InclusivePzPTWithCCQENu.yaml NSFValidation.yaml EAvailableResolution_StudyOnly.yaml NeutronDetection_StudyOnly.yaml NeutronMultiplicity_StudyOnly.yaml q3Resolution.yaml DESTINATION bin PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES Targets.yaml CommonModels.yaml AllNSFSystematics.yaml CVOnly.yaml NucCCNeutronsAntineutrinoStandard.yaml DESTINATION bin)
